# BackEnd-py

./: .gitignore
URL-Shortener/: docker-compose.override.yml  docker-compose.yml
URL-Shortener/API/: .dockerignore  DockerFile  DockerFile.dev  config.py  env.example  main.py  pyproject.toml
URL-Shortener/API/celery/: __init__.py  tasks.py
URL-Shortener/API/db/: __init__.py  connection.py  models.py
URL-Shortener/API/exceptions/: __init__.py  auth-copy.py  auth.py  base.py  db.py  handlers.py  http.py  url.py  user.py
URL-Shortener/API/routes/: __init__.py  auth-copy.py  auth.py  main.py  url.py  user.py
URL-Shortener/API/schemas/: __init__.py  auth-copy.py  auth.py  url.py  user.py
URL-Shortener/API/services/: __init__.py  auth-copy.py  auth.py  main.py  url.py  user.py
URL-Shortener/Worker/: DockerFile  config.py  env.example  main.py  pyproject.toml
